Bug 282477 - 'Add this filter to the apply filter menu' not applied immediately
Summary: 'Add this filter to the apply filter menu' not applied immediately
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: Git (master)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-21 13:56 UTC by Christophe Marin
Modified: 2011-09-21 16:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2011-09-21 13:56:13 UTC
Using master,
- Filter rules, Advanced tab, pick one and check 'Add this filter to the apply menu'

The filter doesn't appear after closing this dialog, a restart is needed
Comment 1 Laurent Montel 2011-09-21 16:02:31 UTC
Git commit 435c6b407518e3a50a7c86df41f9af8e26f9cf16 by Montel Laurent.
Committed on 21/09/2011 at 18:02.
Pushed by mlaurent into branch 'master'.

Bug 282477 - 'Add this filter to the apply filter menu' not applied immediately

BUG: 282477

M  +1    -0    mailcommon/filtermanager.cpp

http://commits.kde.org/kdepim/435c6b407518e3a50a7c86df41f9af8e26f9cf16