Bug 282477 - 'Add this filter to the apply filter menu' not applied immediately

BUG: 282477